--- a/icat/icat-setup.properties
+++ b/icat/icat-setup.properties
@@ -1,5 +1,5 @@
 db.vendor      = mysql
-db.url         = jdbc:mysql://localhost:3306/icat
+db.url         = jdbc:mysql://mysql-server:3306/icat
 db.driver      = com.mysql.jdbc.jdbc2.optional.MysqlDataSource
 
 secure         = false
