--- a/icat/icat.properties
+++ b/icat/icat.properties
@@ -16,7 +16,7 @@ authn.ldap.hostPort = smfisher.esc.rl.ac.uk:3700
 authn.ldap.admin    = true
 authn.ldap.friendly = Federal Id
 
-authn.simple.jndi   = java:global/authn.simple-1.1.0-SNAPSHOT/SIMPLE_Authenticator
+authn.simple.jndi   = java:global/authn.simple-1.1.0/SIMPLE_Authenticator
 authn.shib.jndi     = java:global/authn_shib2local-1.1.0/Shib2Local_Authenticator
 
 authn.anon.jndi     = java:global/authn.anon-1.1.0-SNAPSHOT/ANON_Authenticator
